<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">AndroidGroupA2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="scan">Scan</string>
    <string name="nav_user_notLoggedIn_name">You are not logged in</string>
    <string name="nav_user_notLoggedIn_button">log in</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="actionBar_search">Search titles</string>

    <string-array name="nav_list_items">
        <item>Borrowings</item>
        <item>Notifications</item>
        <item>Barcode scanner</item>
        <item>Add title</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_search">Search result</string>
    <string name="title_activity_borrowings">Borrowings</string>
    <string name="title_activity_titleDetailsPage">Title details</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_addTitle">Add title</string>
    <string name="title_activity_addLoanable">Add loanable</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="header">Welcome</string>
    <string name="subheader">Please log in</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_btn">Log in</string>
    <string name="notnow_btn">Not now</string>
    <string name="register_label">Need an account?</string>
    <string name="title_activity_title_page">TitlePage</string>
    <string name="TitleDetail_Title">Title :</string>
    <string name="TitleDetail_Authors">Authors :</string>
    <string name="TitleDetail_ISBN10">ISBN 10 :</string>
    <string name="TitleDetail_ISBN13">ISBN 13 :</string>
    <string name="TitleDetail_Publisher">Publisher :</string>
    <string name="TitleDetail_Publicationyear">Publication year :</string>
    <string name="TitleDetail_Topics">Topics :</string>
    <string name="borrowing_button_checkIn">Check in</string>
    <string name="borrowing_button_checkOut">Check out</string>
    <string name="borrowing_location">Location: </string>
    <string name="borrowing_doelibsId">DoeLibs id: </string>
    <string name="borrowing_recallDate">Expire date: </string>
    <string name="borrowing_loansTitle">Loans</string>
    <string name="borrowing_reservationsTitle">Reservations</string>
    <string name="borrowing_recallDateNull">Not recalled</string>
    <string name="borrowing_status_available">Available for you</string>
    <string name="borrowing_status_waiting">Waiting for loanable</string>
    <string name="borrowing_info_loanableCheckedIn">Loanable was checked in</string>
    <string name="info_noInternet">You are not connected to the internet</string>
    <string name="info_technicalIssues">Technical issues please try again</string>
    
    <string name="notification_accept">Accept</string>
    <string name="notification_decline">Decline</string>
    <string name="notification_remove">Remove</string>
    <string name="notification_fromSystem">System</string>
    <string name="notification_info_removed">Notification removed</string>
    <string name="notification_info_handled">Notification was handled</string>

    <string name="AddTitleByPhoto">Add Title By Photo</string>
	<string name="Title">Title</string>
	<string name="ISBN10"> ISBN10 </string>
	<string name="ISBN13"> ISBN13 </string>
	<string name="Authors"> Authors </string>
	<string name="Year"> Year </string>
	<string name="FirstEditionYear"> First Edition Year</string>
	<string name="Publisher"> Publisher </string>
	<string name="Topics"> Topics </string>
	<string name="addTitle"> Add Title </string>
	<string name="Edition">Edition</string>   
    <string name="checkoutbtn">Check Out</string>
    <string name="loanablesheader">Loanables</string>
    <string name="addloanablebtn">Add loanable</string>
    
    <string name="addloanable_identity">Identity</string>
    <string name="addloanable_room">Room</string>
    <string name="addloanable_locationCategory">Location Category</string>

</resources>
