<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
    	
    	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/identity"
    	    android:text="@string/addloanable_identity"/>
    	
    	<EditText 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"/>
    </LinearLayout>

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
    	
    	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/room"
    	    android:text="@string/addloanable_room"/>
    	
    	<EditText 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"/>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
    	
    	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/locationCategory"
    	    android:text="@string/addloanable_locationCategory"/>
    	
    	<EditText 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"/>
    </LinearLayout>
    
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:background="#B8BAB9"
	    android:id="@+id/SaveBtn"/>
</LinearLayout>
